<resources>
    <string name="app_name">The Movie Manager</string>
    <string name="make_a_search">Make a search</string>
    <string name="cancel">Cancel</string>
    <string name="or">or</string>
    <string name="information">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_with_email">Login with username</string>
    <string name="login">Login</string>
    <string name="favorites">Favorites</string>
    <string name="my_watch_list">Watchlist</string>
    <string name="movie_title">Movie title</string>
    <string name="login_with_website">Login with Website</string>
    <string name="watchlist_info">"You dont’t have any movies in your watchlist yet."</string>
    <string name="favorite_info">"You haven’t favorited any movie yet."</string>
    <string name="search_info">"I do believe that movies are subject to a \n million interpretations." \n - Oliver Stone</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="add_to_my_watchlist">Add to My Watchlist</string>
    <string name="remove_from_my_watchlist">Remove from My Watchlist</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_watchlist">WATCHLIST</string>
    <string name="menu_favorites">FAVORITES</string>
    <string name="log_out">Log out</string>
    <string name="login_manager">MANAGER</string>
    <string name="login_the">THE</string>
    <string name="login_movie">MOVIE</string>
</resources>