<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_general"
        android:layout_marginEnd="@dimen/margin_general"
        android:layout_marginBottom="@dimen/margin_general"
        android:text="@string/information"
        android:textColor="@color/colorGray"
        android:textSize="13sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/constraintHeader"
        android:layout_marginStart="@dimen/margin_general"
        android:layout_marginEnd="@dimen/margin_general"
        android:background="@color/colorHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintHeader">

        <View
            android:id="@+id/viewOr1"
            android:layout_width="48dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorGray"
            app:layout_constraintBottom_toBottomOf="@+id/txtOr"
            app:layout_constraintEnd_toStartOf="@+id/txtOr"
            app:layout_constraintTop_toTopOf="@+id/txtOr" />

        <View
            android:id="@+id/viewOr2"
            android:layout_width="48dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorGray"
            app:layout_constraintBottom_toBottomOf="@+id/txtOr"
            app:layout_constraintStart_toEndOf="@+id/txtOr"
            app:layout_constraintTop_toTopOf="@+id/txtOr" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textColor="@color/colorGray"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/CustomInputStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEdtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:text="@string/login_with_email"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/CustomInputStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tilEmail"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword"
            app:layout_constraintStart_toStartOf="@+id/tilPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginWebsite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login_with_website"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtOr"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/login_manager"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgMovie"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/imgMovie" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/login_the"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/imgWatchList" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/login_movie"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgFavorites"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/imgFavorites" />

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imgMovie"
            app:layout_constraintStart_toEndOf="@+id/imgWatchList"
            app:layout_constraintTop_toTopOf="@+id/imgWatchList" />

        <ImageView
            android:id="@+id/imgFavorites"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imgWatchList"
            app:layout_constraintTop_toBottomOf="@+id/imgWatchList"
            app:srcCompat="@drawable/ic_favorite" />

        <ImageView
            android:id="@+id/imgWatchList"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_watch_list" />

        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgFavorites"
            app:layout_constraintTop_toBottomOf="@+id/imgFavorites"
            app:srcCompat="@drawable/ic_movie" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>