<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:paddingBottom="56dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/constraintHeader"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/txtEmptyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/search_info"
        android:textColor="@color/colorTextSearchInfo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeader">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogOut"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearch"
            style="@style/CustomInputStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginBottom="@dimen/margin_general"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEdtSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/movie_title"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/margin_general"
            android:text="@string/make_a_search"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>